applying review feedback

--- a/plugins/CoreHome/angularjs/period-selector/period-selector.directive.html
+++ b/plugins/CoreHome/angularjs/period-selector/period-selector.directive.html
@@ -123,9 +123,7 @@
         </div>
 
         <div id="ajaxLoadingCalendar" ng-if="periodSelector.isLoadingNewPage">
-            <div class="loadingPiwik">
-                <img src="plugins/Morpheus/images/loading-blue.gif" alt="{{ 'General_LoadingData'|translate }}" />{{ 'General_LoadingData'|translate }}
-            </div>
+            <div piwik-activity-indicator loading="true"></div>
             <div class="loadingSegment">
                 {{ 'SegmentEditor_LoadingSegmentedDataMayTakeSomeTime'|translate }}
             </div>
