fixing more build issues

--- a/plugins/CoreHome/angularjs/period-selector/period-selector.directive.html
+++ b/plugins/CoreHome/angularjs/period-selector/period-selector.directive.html
@@ -75,12 +75,13 @@
                 <span>Compare to:</span>
             </label>
 
+            <!-- TODO: missing some translations -->
             <div
                     id="comparePeriodToDropdown"
                     piwik-field
                     name="comparePeriodToDropdown"
                     uicontrol="select"
-                    options="[{key: 'custom', value: 'Custom'}, {key: 'previousPeriod', value: 'Previous period'}, {key: 'previousYear', value: 'Previous year'}]"
+                    options="[{key: 'custom', value: 'Custom'}, {key: 'previousPeriod', value: 'Previous&nbsp;period'}, {key: 'previousYear', value: 'Previous&nbsp;year'}]"
                     ng-model="periodSelector.comparePeriodType"
                     full-width="true"
                     disabled="!periodSelector.isComparing"
