Fix some console warnings on chrome.

--- a/plugins/CorePluginsAdmin/angularjs/form-field/field-field-array.html
+++ b/plugins/CorePluginsAdmin/angularjs/form-field/field-field-array.html
@@ -1,7 +1,7 @@
 <div>
     <label for="{{ formField.name }}" ng-bind-html="formField.title"></label>
     <div matomo-field-array
-         name="{{ formField.name }}"
+         name="formField.name"
          ng-model="formField.value"
          field="formField.uiControlAttributes.field">
     </div>
