--- a/plugins/CorePluginsAdmin/angularjs/form-field/field-multituple.html
+++ b/plugins/CorePluginsAdmin/angularjs/form-field/field-multituple.html
@@ -1,7 +1,7 @@
 <div>
     <label for="{{ formField.name }}" ng-bind-html="formField.title"></label>
     <div matomo-multi-pair-field
-         name="{{ formField.name }}"
+         name="formField.name"
          ng-model="formField.value"
          field1="formField.uiControlAttributes.field1"
          field2="formField.uiControlAttributes.field2">
