Fix two more form issues.

--- a/plugins/CorePluginsAdmin/angularjs/form-field/field-checkbox-array.html
+++ b/plugins/CorePluginsAdmin/angularjs/form-field/field-checkbox-array.html
@@ -3,14 +3,15 @@
     <p ng-repeat="checkboxModel in formField.availableOptions"
        class="checkbox">
         <label for="{{ formField.name + checkboxModel.key }}">{{ checkboxModel.value }}
-            <span class="form-description" ng-show="checkboxModel.description">{{ checkboxModel.description }}</span></label>
+            <input ng-model="formField.checkboxkeys[$index.toString()]"
+                   value="{{ checkboxModel.key }}"
+                   ng-change="formField.updateCheckboxArrayValue()"
+                   piwik-attributes="{{formField.uiControlAttributes}}"
+                   type="checkbox"
+                   id="{{ formField.name + checkboxModel.key }}"
+                   name="{{ checkboxModel.name }}">
 
-        <input ng-model="formField.checkboxkeys[$index.toString()]"
-               value="{{ checkboxModel.key }}"
-               ng-change="formField.updateCheckboxArrayValue()"
-               piwik-attributes="{{formField.uiControlAttributes}}"
-               type="checkbox"
-               id="{{ formField.name + checkboxModel.key }}"
-               name="{{ checkboxModel.name }}">
+            <span class="form-description" ng-show="checkboxModel.description">{{ checkboxModel.description }}</span>
+        </label>
     </p>
 </div>
