Get initial JS tracking test to work.

--- a/tests/resources/overlay-test-site/page-1.html
+++ b/tests/resources/overlay-test-site/page-1.html
@@ -83,8 +83,14 @@
     <script>
         var pkBaseURL = (("https:" == document.location.protocol) ? "https://%trackerBaseUrl%" : "http://%trackerBaseUrl%");
         try {
-            var piwikTracker = Piwik.getTracker(pkBaseURL + "matomo.php", 3);
+            var piwikTracker = Piwik.getTracker(pkBaseURL + "matomo.php", %idSite%);
             piwikTracker.setCookieDomain('*.piwik.org');
+
+            if (/&cdt=/.test(window.location.href)
+                || localStorage.getItem('cdt')
+            ) {
+                // empty
+            }
 
             piwikTracker.trackPageView();
             piwikTracker.enableLinkTracking();
