Use new functionality in exampletracker so it will be tested in new UI test.

--- a/tests/resources/overlay-test-site/page-1.html
+++ b/tests/resources/overlay-test-site/page-1.html
@@ -94,7 +94,9 @@
 
             piwikTracker.trackPageView();
             piwikTracker.enableLinkTracking();
-        } catch( err ) {}
+        } catch( err ) {
+            console.log(err.stack || err.message);
+        }
     </script>
   </body>
 </html>
