--- a/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_schedrep_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_schedrep_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -1452,7 +1452,7 @@
                     &nbsp;Bounce Rate&nbsp;&nbsp;
                 </th>
                             <th style="border-bottom:1px solid rgb(231,231,231);font-size: 15px;text-align: left;font-weight:normal;padding:13px 0 13px 10px;color:#0d0d0d;font-family:-apple-system, BlinkMacSystemFont, &#039;Segoe UI&#039;, Roboto, Oxygen-Sans, Cantarell, &#039;Helvetica Neue&#039;, sans-serif; text-align:right;">
-                    &nbsp;Conversion Rate&nbsp;&nbsp;
+                    &nbsp;Revenue&nbsp;&nbsp;
                 </th>
                         </thead>
             <tbody>
@@ -1478,7 +1478,7 @@
                                                                                                 0%
                                                                                     </td>
                                             <td style="padding:17px 15px; text-align:right;;border-bottom:1px solid rgb(231,231,231);font-size: 15px;font-variant-numeric: tabular-nums;padding:17px 15px;color:#0d0d0d;font-family:-apple-system, BlinkMacSystemFont, &#039;Segoe UI&#039;, Roboto, Oxygen-Sans, Cantarell, &#039;Helvetica Neue&#039;, sans-serif;">
-                                                                                                0%
+                                                                                                $0
                                                                                     </td>
                                     </tr>
                             
@@ -1503,7 +1503,7 @@
                                                                                                 100%
                                                                                     </td>
                                             <td style="padding:17px 15px; text-align:right;;border-bottom:1px solid rgb(231,231,231);font-size: 15px;font-variant-numeric: tabular-nums;padding:17px 15px;color:#0d0d0d;font-family:-apple-system, BlinkMacSystemFont, &#039;Segoe UI&#039;, Roboto, Oxygen-Sans, Cantarell, &#039;Helvetica Neue&#039;, sans-serif;">
-                                                                                                0%
+                                                                                                $0
                                                                                     </td>
                                     </tr>
                             
@@ -1528,7 +1528,7 @@
                                                                                                 100%
                                                                                     </td>
                                             <td style="padding:17px 15px; text-align:right;;border-bottom:1px solid rgb(231,231,231);font-size: 15px;font-variant-numeric: tabular-nums;padding:17px 15px;color:#0d0d0d;font-family:-apple-system, BlinkMacSystemFont, &#039;Segoe UI&#039;, Roboto, Oxygen-Sans, Cantarell, &#039;Helvetica Neue&#039;, sans-serif;">
-                                                                                                0%
+                                                                                                $0
                                                                                     </td>
                                     </tr>
                         </tbody>
