--- a/plugins/Ecommerce/tests/System/expected/test_ecommerceOrderWithItems_schedrep_html_tables_only__ScheduledReports.generateReport_week.original.html
+++ b/plugins/Ecommerce/tests/System/expected/test_ecommerceOrderWithItems_schedrep_html_tables_only__ScheduledReports.generateReport_week.original.html
@@ -1393,7 +1393,7 @@
                     &nbsp;Bounce Rate&nbsp;&nbsp;
                 </th>
                             <th style="border-bottom:1px solid rgb(231,231,231);font-size: 15px;text-align: left;font-weight:normal;padding:13px 0 13px 10px;color:#0d0d0d;font-family:-apple-system, BlinkMacSystemFont, &#039;Segoe UI&#039;, Roboto, Oxygen-Sans, Cantarell, &#039;Helvetica Neue&#039;, sans-serif; text-align:right;">
-                    &nbsp;Conversion Rate&nbsp;&nbsp;
+                    &nbsp;Revenue&nbsp;&nbsp;
                 </th>
                         </thead>
             <tbody>
@@ -1419,7 +1419,7 @@
                                                                                                 20%
                                                                                     </td>
                                             <td style="padding:17px 15px; text-align:right;;border-bottom:1px solid rgb(231,231,231);font-size: 15px;font-variant-numeric: tabular-nums;padding:17px 15px;color:#0d0d0d;font-family:-apple-system, BlinkMacSystemFont, &#039;Segoe UI&#039;, Roboto, Oxygen-Sans, Cantarell, &#039;Helvetica Neue&#039;, sans-serif;">
-                                                                                                80%
+                                                                                                $13,361.11
                                                                                     </td>
                                     </tr>
                         </tbody>
