update more screenshots and fix couple more issues

--- a/plugins/CorePluginsAdmin/angularjs/form-field/field-checkbox-array.html
+++ b/plugins/CorePluginsAdmin/angularjs/form-field/field-checkbox-array.html
@@ -2,7 +2,7 @@
     <label class="fieldRadioTitle" ng-show="formField.title">{{ formField.title }}</label>
     <p ng-repeat="checkboxModel in formField.availableOptions"
        class="checkbox">
-        <label for="{{ formField.name + checkboxModel.key }}">{{ checkboxModel.value }}
+        <label for="{{ formField.name + checkboxModel.key }}">
             <input ng-model="formField.checkboxkeys[$index.toString()]"
                    value="{{ checkboxModel.key }}"
                    ng-change="formField.updateCheckboxArrayValue()"
@@ -10,6 +10,7 @@
                    type="checkbox"
                    id="{{ formField.name + checkboxModel.key }}"
                    name="{{ checkboxModel.name }}">
+            <span>{{ checkboxModel.value }}</span>
 
             <span class="form-description" ng-show="checkboxModel.description">{{ checkboxModel.description }}</span>
         </label>
