Styling tweak for multituple labels.

--- a/plugins/CorePluginsAdmin/angularjs/form-field/field-multituple.html
+++ b/plugins/CorePluginsAdmin/angularjs/form-field/field-multituple.html
@@ -1,4 +1,4 @@
-<div>
+<div class="fieldMultiTuple">
     <label for="{{ formField.name }}" ng-bind-html="formField.title"></label>
     <div matomo-multi-pair-field
          name="formField.name"
