replace icon in multisites report

--- a/plugins/MultiSites/angularjs/site/site.directive.html
+++ b/plugins/MultiSites/angularjs/site/site.directive.html
@@ -4,7 +4,7 @@
 
         <span style="width: 10px; margin-left:3px;">
             <a rel="noreferrer noopener" target="_blank" title="{{ 'General_GoTo'|translate:website.main_url }}" ng-href="{{ website.main_url }}">
-            <img src="plugins/Morpheus/images/link.png"/></a>
+            <span class="icon icon-outlink"></span></a>
         </span>
     </td>
     <td ng-if="website.isGroup" class="multisites-label label">
